--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="form-group">
 				<label for="password" class="text-dark">Password</label>
 				<input type="text" name="password" id="password" autocomplete="off" class="form-control">
-				<p class="text-muted">Passowrd to the new account. Please save it somewhere safe before you create the account.</p>
+				<p class="text-muted">Password of the new account. Please save it somewhere safe before you create the account.</p>
 			</div>
 			<div class="form-group">
 				<label for="creator" class="text-dark">Creator Account</label>
