--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="col-md-6">
 					<div class="form-group">
 						<label for="active-key" class="sr-only">Active Key</label>
-						<input type="text" name="active-key" id="active-key" autocomplete="off" class="form-control" placeholder="Active Key">
+						<input type="password" name="active-key" id="active-key" autocomplete="off" class="form-control" placeholder="Active Key">
 					</div>
 				</div>
 				<div class="col-md-3 col-lg-2">
@@ -63,7 +63,7 @@
 			</div>
 			<div class="form-group">
 				<label for="creator-key" class="text-dark">Active Key</label>
-				<input type="text" name="creator-key" id="creator-key" autocomplete="off" class="form-control">
+				<input type="password" name="creator-key" id="creator-key" autocomplete="off" class="form-control">
 				<p class="text-muted">Enter creator account's PRIVATE ACTIVE KEY.</p>
 			</div>
 			<button class="btn btn-success btn-block" type="submit">Create Account</button>
