--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</p>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://unpkg.com/dsteem@latest/dist/dsteem.js"></script>
+	<script src="https://unpkg.com/dsteem@^0.10.1/dist/dsteem.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
