DOC: improve external links & README

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
 		<hr>
 		<p class="text-center">
-			Brought to you by <a href="https://steemit.com/@reazuliqbal">@reazuliqbal</a>
+			Brought to you by <a href="https://steemit.com/@reazuliqbal">@reazuliqbal</a>.<br>
+			Open source <a href="https://github.com/CodeBull/AccountCreate">on GitHub</a>.
 		</p>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
