Added Hive Support

--- a/index.html
+++ b/index.html
@@ -4,29 +4,33 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<title>Steem Account Claim &amp; Create</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<title>Create Steem and Hive Account</title>
 </head>
 
 <body>
 	<div class="container pt-3">
-		<h1 class="text-center mb-5">Steem Account Claim &amp; Create</h1>
+		<h1 class="text-center mb-5">Create Hive and Steem Account</h1>
 
 		<h3>Claim Discounted Account</h3>
+		<hr>
+
 		<form id="claim-account" method="POST">
+			<input type="hidden" id="claim-account-chain" name="claim-account-chain" value="hive">
 
 			<div id="claim-account-feedback" class="alert"></div>
 
 			<div class="row">
-				<div class="col-md-3 col-lg-4">
+				<div class="col-sm-6">
 					<div class="form-group">
 						<label for="username" class="sr-only">Username</label>
 						<input type="text" name="username" id="username" autocomplete="off" class="form-control"
 							placeholder="Username" required>
+						<div class="text-muted small mt-1"></div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-sm-6">
 					<div class="form-group">
 						<label for="active-key" class="sr-only">Active Key</label>
 						<input type="password" name="active-key" id="active-key" autocomplete="off" class="form-control"
@@ -34,61 +38,80 @@
 						<p class="text-muted small mt-1">Leave this field blank to use Steem Keychain.</p>
 					</div>
 				</div>
-				<div class="col-md-3 col-lg-2">
-					<button class="btn btn-success btn-block" type="submit">Claim Account</button>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-sm-6 mt-2">
+					<button class="btn btn-secondary btn-block" type="submit" id="claim-account-hive">
+						<img src="icons/hive.svg" alt="Hive" width="40" height="40">&nbsp; Claim Account</button>
+				</div>
+				<div class="col-sm-6 mt-2">
+					<button class="btn btn-secondary btn-block" type="submit" id="claim-account-steem">
+						<img src="icons/steem.svg" alt="Steem" width="40" height="40">&nbsp; Claim Account</button>
 				</div>
 			</div>
-			<p class="text-muted">Please check <a href="https://beempy.com/resource_costs">Beempy.com</a> to find out
-				how much RC is required.</p>
+			<p class="text-muted text-center mt-2">Please check <a
+					href="https://beempy.com/resource_costs">Beempy.com</a> to find out how much RC is required.</p>
 		</form>
 
+		<h3>Create Claimed Account</h3>
 		<hr>
 
-		<h3>Create Claimed Account</h3>
 		<form id="create-account" method="POST">
+			<input type="hidden" id="create-account-chain" name="create-account-chain" value="hive">
 
 			<div id="create-account-feedback" class="alert"></div>
 
 			<div class="form-group">
-				<label for="new-account" class="text-dark">Account Username</label>
+				<label for="new-account">Account Username</label>
 				<input type="text" name="new-account" id="new-account" autocomplete="off" class="form-control" required>
-				<p class="text-muted">Enter the username you want to create.</p>
+				<div class="form-text small message">Enter the username you want to create.</div>
 			</div>
 			<div class="form-group">
-				<label for="password" class="text-dark">Password</label>
+				<label for="password">Password</label>
 				<input type="text" name="password" id="password" autocomplete="off" class="form-control" required>
-				<p class="text-muted">Password of the new account. Please save it somewhere safe before you create the
+				<p class="form-text small">Password of the new account. Please save it somewhere safe before you create
+					the
 					account.</p>
 			</div>
 			<div class="form-group">
-				<label for="creator" class="text-dark">Creator Account</label>
+				<label for="creator">Creator Account</label>
 				<input type="text" name="creator" id="creator" autocomplete="off" class="form-control" required>
-				<p class="text-muted">Enter the account who will be paying the fee in claimed account credit.</p>
+				<p class="form-text small">Enter the account who will be paying the fee in claimed account credit.</p>
 			</div>
 			<div class="form-group">
-				<label for="delegation" class="text-dark">Delegation</label>
+				<label for="delegation">Delegation</label>
 				<input type="text" name="delegation" id="delegation" autocomplete="off" class="form-control"
 					value="0.000 SP">
-				<p class="text-muted">If you want to delegate some SP to your newly created account, enter the amount in
+				<p class="form-text small">If you want to delegate some SP to your newly created account, enter the
+					amount in
 					SP.</p>
 			</div>
 			<div class="form-group">
-				<label for="creator-key" class="text-dark">Active Key</label>
+				<label for="creator-key">Active Key</label>
 				<input type="password" name="creator-key" id="creator-key" autocomplete="off" class="form-control">
-				<p class="text-muted">Enter creator account's PRIVATE ACTIVE KEY. <span class="small">Leave this field
-						blank to use Steem Keychain.</span></p>
+				<p class="form-text small">Enter creator account's PRIVATE ACTIVE KEY. Leave this field
+					blank to use Steem Keychain.</p>
 			</div>
-			<button class="btn btn-success btn-block" type="submit">Create Account</button>
+			<div class="row">
+				<div class="col-sm-6 mt-2">
+					<button class="btn btn-primary btn-block" id="create-account-hive">
+						<img src="icons/hive.svg" alt="Hive" width="40" height="40">&nbsp; Create Account</button>
+				</div>
+				<div class="col-sm-6 mt-2">
+					<button class="btn btn-primary btn-block" id="create-account-steem">
+						<img src="icons/steem.svg" alt="Steem" width="40" height="40">&nbsp; Create Account</button>
+				</div>
+			</div>
 		</form>
 
 		<hr>
 		<p class="text-center">
-			Brought to you by <a href="https://steemit.com/@reazuliqbal">@reazuliqbal</a>.<br>
+			Brought to you by <a href="https://hive.blog/@reazuliqbal">@reazuliqbal</a>.<br>
 			Open source <a href="https://github.com/CodeBull/AccountCreate">on GitHub</a>.
 		</p>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 		crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/dsteem@^0.10.1/dist/dsteem.js"></script>
 	<script src="js/app.js"></script>
