Fixed delegation not working

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 			<div class="form-group">
 				<label for="delegation">Delegation</label>
 				<input type="text" name="delegation" id="delegation" autocomplete="off" class="form-control"
-					value="0.000 SP">
-				<p class="form-text small">If you want to delegate some SP to your newly created account, enter the
+					value="0.000">
+				<p class="form-text small">If you want to delegate some HP/SP to your newly created account, enter the
 					amount in
-					SP.</p>
+					HP/SP.</p>
 			</div>
 			<div class="form-group">
 				<label for="creator-key">Active Key</label>
@@ -114,6 +114,7 @@
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 		crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/dsteem@^0.10.1/dist/dsteem.js"></script>
+	<script src="https://unpkg.com/@hivechain/dhive@0.13.3/dist/dhive.js"></script>
 	<script src="js/app.js"></script>
 </body>
 
