--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 		crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/dsteem@^0.10.1/dist/dsteem.js"></script>
-	<script src="https://unpkg.com/@hivechain/dhive@0.13.3/dist/dhive.js"></script>
+	<script src="https://unpkg.com/@hiveio/dhive@0.14.12/dist/dhive.js"></script>
 	<script src="js/app.js"></script>
 </body>
 
